# Teste-Actions-Qt

./: CMakeLists.txt  README.md  main.cpp  release.md
.github/scripts/: BuildWindows.ps1
.github/scripts/nsis/: installer.nsi
.github/workflows/: build.yml
frontend/: programa.cpp  programa.h  programa.ui
frontend/resources/: rc.rc  resources.qrc
